--- a/index.html
+++ b/index.html
@@ -14,3 +14,21 @@
 <p3 class="thick">短所</p3><p3>・・・コスト面、結晶シリコン（Si）との価格競争で劣位（昨今は中国企業も参入）</p3><br>
 <p3 class="thick">代表的な製品</p3><p3>・・・SFK190-S（ソーラーフロンティア社）</p3><img src="https://www.solar-frontier.com/jpn/img/products/modules/SFK190-S_img.jpg" alt="SFK190-S" style="width:364px;height:228px;"><br>
 </p2>
+
+<br><br>
+
+<div style="border: solid;"> 
+個別リンク
+<br>
+<p3 class="thick">　<a href="https://tetsuo2002s.github.io/-silicon/"><シリコン系太陽電池></a> </p3>/ <p3>
+ <a href="https://takahiro1863.github.io/ouyoubuturi2/">単結晶シリコン太陽電池</a> /
+<a href="https://2159116.github.io/takesshou/">多結晶シリコン太陽電池</a> /
+<a href="https://rando5656.github.io/-.github.io/">多接合太陽電池</a> /
+<a href="https://eiji-2021.github.io/purosuta/">薄膜シリコン太陽電池</a> /</p3><p3 class="thick"><a href="https://tetsuo2002s.github.io/kagoubutu/"> <化合物系太陽電池></a> </p3>/<p3>
+<a href="https://tetsuo2002s.github.io/kagoubutu/">CIS、CIGS太陽電池</a> /</p3>
+<p3 class="thick"><a href="https://tetsuo2002s.github.io/yuukikagou/"><有機系太陽電池></a> </p3><p3>/
+<a href="https://tetsuo2002s.github.io/sikisozoukann/">色素増感太陽電池</a> /
+<a href="https://tetsuo2002s.github.io/perobusukaito/">ペロブスカイト太陽電池</a></p3>
+
+</div>
+</div>
