--- a/index.html
+++ b/index.html
@@ -1,21 +1,48 @@
-<h2 id="2">有機系太陽電池</h2><b></b><br>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<style>
+p1 {
+    font-size: 1.275em;
+}
+p1 {
+    font-family: "", Times, serif;
+}
+p2 {
+    font-size: 0.875em;
+}
+p3 {
+    font-size: 0.875em;
+}
+p3.thick {
+    font-weight: bold;
+}
+</style>
+<h2 id="2">色素増感太陽電池</h2><b></b>
 
-<p1>　色素増感太陽電池
-</p1>
-<p2>・・・<br>
-　発電素子(セル)の半導体材料にシリコンではなく、複数の物質を使うタイプの太陽電池。銅、インジウム、セレンを原料とするCIS太陽電池、これにガリウムを加えたCIGS太陽電池などが一般的です。<br></p2>
-<p3 class="thick">原理</p3><p3>・・・銅、インジウム、セレン、ガリウムの４つの元素を混ぜ合わせた化合物は、シリコン同様の半導体になり、CIGS太陽電池はシリコンの代わりに、これらの元素を混ぜ合わせた化合物を使います。
 
-</p3>
+<p2>
+　色素増感太陽電池は、色素が光を吸収して電気に変える仕組みの有機系太陽電池ですある。酸化物半導体（酸化チタン、酸化亜鉛など）の表面に色素を吸着させることにより変換効率が大きく向上することが確認されて以来、次世代太陽電池として注目を集めており、無機物で構成された太陽電池よりも安価に量産できると期待されている。。
+<br></p2>
+<p3 class="thick">原理</p3><p3>・・・</p3><br>
+太陽光や室内光が当たると、電池の中の色素分子が光を吸収し、基底状態の電子が励起状態へと遷移し、光エネルギーを蓄える。<br>色素増感太陽電池の光電変換プロセスは天然の光合成における光電変換プロセスと似ているため光合成模倣型太陽電池to
+も呼ばれている。
+<img src="https://specchem-wako-jp.fujifilm.com/dye_sensitized_solar_cell/image/cell_img01.jpg" alt="色素増感太陽電池" style="width:364px;height:228px;">
 <br>
-<img src="http://www.solartech.jp/images/cell_type/cigs.jpg" alt="CIGS太陽電池" style="width:364px;height:228px;">
-<br>
-<p3 class="thick">長所</p3><p3>・・・用途に合わせて様々な性能や形態の製品を製造できる、用いる材料や製造法の選択肢が豊富、省資源型の太陽電池で、放射線に耐性がある、変換効率が高い。</p3><br>
-<p3 class="thick">短所</p3><p3>・・・コスト面、結晶シリコン（Si）との価格競争で劣位（昨今は中国企業も参入）</p3><br>
-<p3 class="thick">代表的な製品</p3><p3>・・・SFK190-S（ソーラーフロンティア社）</p3><img src="https://www.solar-frontier.com/jpn/img/products/modules/SFK190-S_img.jpg" alt="SFK190-S" style="width:364px;height:228px;"><br>
+<p3>出典：https://specchem-wako-jp.fujifilm.com/dye_sensitized_solar_cell/</p3><br>
+<p3 class="thick">長所</p3> <p3>・・・室内光でも光エネルギーを蓄える力があることから、低照度環境での発電能力が高い。従来の太陽電池では設置しづらい場所に設置できる。</p3><br>
+<p3 class="thick">短所</p3> <p3>・・・まだ実用化されておらず、⾼いリスクが伴う事業である。現状では長期安定性が従来の太陽電池より劣るなど課題が多い。</p3><br>
+<p3 class="thick">代表的な製品</p3><p3>・・・現在は研究段階である。</p3><br>
 </p2>
-
 <br><br>
+
+<p3>＜参考文献＞ <br>
+
+色素増感太陽電池用色素（DSC色素）https://specchem-wako-jp.fujifilm.com/dye_sensitized_solar_cell/ 富士フィルム　和光純薬株式会社<br>
+荒川（2004）色素増感太陽電池　https://www.jstage.jst.go.jp/article/mukimate2000/11/313/11_313_481/_pdf  Journal of the Society of Inorganic Materials, Japan 11, 481-488
+</p3><br><br>
 
 <div style="border: solid;"> 
 個別リンク
@@ -32,3 +59,8 @@
 
 </div>
 </div>
+<br><br>
+
+
+</body>
+</html>
